--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,12 +27,10 @@ else ()
     include_directories(cJSON ${TCL_INCLUDE_PATH})
     target_link_libraries(tjson PRIVATE cjson ${TCL_LIBRARY})
     get_filename_component(TCL_LIBRARY_PATH "${TCL_LIBRARY}" PATH)
-    if (TCL_LIBRARY_PATH)
-        install(TARGETS ${TARGET}
-            LIBRARY DESTINATION ${TCL_LIBRARY_PATH}/${TARGET}
-        )
-        install(FILES pkgIndex.tcl
-            DESTINATION ${TCL_LIBRARY_PATH}/${TARGET}
-        )
-    endif()
+    install(TARGETS ${TARGET}
+            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${TARGET}
+    )
+    install(FILES pkgIndex.tcl
+            DESTINATION $${CMAKE_INSTALL_PREFIX}/lib/${TARGET}
+    )
 endif()
