--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22.1)
-project(tjson LANGUAGES C)
+project(tjson VERSION 1.0.0 LANGUAGES C)
 
 set(TARGET tjson)
 set(CMAKE_C_STANDARD   11)
@@ -8,9 +8,9 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
+set(CMAKE_C_FLAGS  "-DVERSION=${PROJECT_VERSION} ${CMAKE_C_FLAGS}")
 
-add_library(tjson SHARED MODULE library.c)
+add_library(tjson MODULE library.c)
 set_target_properties(tjson PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 include(${CMAKE_CURRENT_LIST_DIR}/FindTCL.cmake)
@@ -27,10 +27,14 @@ else ()
     include_directories(cJSON ${TCL_INCLUDE_PATH})
     target_link_libraries(tjson PRIVATE cjson ${TCL_LIBRARY})
     get_filename_component(TCL_LIBRARY_PATH "${TCL_LIBRARY}" PATH)
+
     install(TARGETS ${TARGET}
-            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${TARGET}
+            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${TARGET}${PROJECT_VERSION}
     )
-    install(FILES pkgIndex.tcl
-            DESTINATION $${CMAKE_INSTALL_PREFIX}/lib/${TARGET}
+
+    configure_file(pkgIndex.tcl.in pkgIndex.tcl.in @ONLY)
+
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/pkgIndex.tcl
+            DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${TARGET}${PROJECT_VERSION}
     )
 endif()
