--- a/pkgIndex.tcl.in
+++ b/pkgIndex.tcl.in
@@ -1,3 +1,3 @@
 set dir [file dirname [info script]]
 
-package ifneeded tjson @PROJECT_VERSION@ [list load [file join $dir libtjson.so]]
+package ifneeded tjson @PROJECT_VERSION@ [list load [file join $dir libtjson[info sharedlibextension]]]
